--- a/src/Makefile.rules
+++ b/src/Makefile.rules
@@ -104,7 +104,7 @@ endif
 # Used libraries
 
 LDLIBS		+= -l$(LIBNAME)
-LDLIBS		+= -Wl,--start-group -lc -lgcc -lnosys -Wl,--end-group
+LDLIBS		+= -Wl,--start-group -lc_nano -lgcc -lnosys -Wl,--end-group
 
 ###############################################################################
 ###############################################################################
